--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,7 @@ android {
 dependencies {
     def room_version = "2.2.5"
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation "androidx.constraintlayout:constraintlayout:2.0.4"
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.preference:preference-ktx:1.1.1'
     implementation 'androidx.appcompat:appcompat:1.2.0'
